--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <p class="p2"><span class="s1"><span class="Apple-converted-space">    </span>&lt;script src="https://cdn.tailwindcss.com"&gt;&lt;/script&gt;</span></p>
 <p class="p2"><span class="s1"><span class="Apple-converted-space">    </span>&lt;link rel="preconnect" href="https://fonts.googleapis.com"&gt;</span></p>
 <p class="p2"><span class="s1"><span class="Apple-converted-space">    </span>&lt;link rel="preconnect" href="https://fonts.gstatic.com" crossorigin&gt;</span></p>
-<p class="p2"><span class="s1"><span class="Apple-converted-space">    </span>&lt;link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&amp;family=Playfair+Display:ital,wght@0,400;0,700;1,400&amp;family=Montserrat:wght@300;400;600;700&amp;family=Lexend:wght@300;400;700&amp;family=Inter:wght@400;600;700&amp;family=Jost:wght@300;400;500;600;700&amp;display=swap" rel="stylesheet"&gt;</span></p>
+<p class="p2"><span class="s1"><span class="Apple-converted-space">    </span>&lt;link href="https://fonts.googleapis.com/css2?family=Lexend:wght@300;400;700&amp;family=Montserrat:wght@400;700&amp;family=Jost:wght@300;400;600&amp;family=Playfair+Display:wght@700&amp;family=Bodoni+Moda:wght@700&amp;display=swap" rel="stylesheet"&gt;</span></p>
 <p class="p2"><span class="s1"><span class="Apple-converted-space">    </span>&lt;style&gt;</span></p>
 <p class="p2"><span class="s1"><span class="Apple-converted-space">      </span>:root {</span></p>
 <p class="p2"><span class="s1"><span class="Apple-converted-space">        </span>--rotondo-bg: #ffffff;</span></p>
@@ -61,11 +61,11 @@
 <p class="p2"><span class="s1"><span class="Apple-converted-space">  </span>&lt;script type="importmap"&gt;</span></p>
 <p class="p2"><span class="s1">{</span></p>
 <p class="p2"><span class="s1"><span class="Apple-converted-space">  </span>"imports": {</span></p>
-<p class="p2"><span class="s1"><span class="Apple-converted-space">    </span>"vite": "https://esm.sh/vite@^7.3.1",</span></p>
-<p class="p2"><span class="s1"><span class="Apple-converted-space">    </span>"@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",</span></p>
-<p class="p2"><span class="s1"><span class="Apple-converted-space">    </span>"react/": "https://esm.sh/react@^19.2.4/",</span></p>
 <p class="p2"><span class="s1"><span class="Apple-converted-space">    </span>"react": "https://esm.sh/react@^19.2.4",</span></p>
-<p class="p2"><span class="s1"><span class="Apple-converted-space">    </span>"react-dom/": "https://esm.sh/react-dom@^19.2.4/"</span></p>
+<p class="p2"><span class="s1"><span class="Apple-converted-space">    </span>"react-dom/": "https://esm.sh/react-dom@^19.2.4/",</span></p>
+<p class="p2"><span class="s1"><span class="Apple-converted-space">    </span>"react/": "https://esm.sh/react@^19.2.4/",</span></p>
+<p class="p2"><span class="s1"><span class="Apple-converted-space">    </span>"vite": "https://esm.sh/vite@^7.3.1",</span></p>
+<p class="p2"><span class="s1"><span class="Apple-converted-space">    </span>"@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"</span></p>
 <p class="p2"><span class="s1"><span class="Apple-converted-space">  </span>}</span></p>
 <p class="p2"><span class="s1">}</span></p>
 <p class="p2"><span class="s1">&lt;/script&gt;</span></p>
