--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
 <body>
   <div id="root"></div>
-  <script type="module" src="./index.tsx"></script>
+  <script type="module" src="/index.tsx"></script>
 </body>
 
 </html>
